Update README.md
How to Run and using SceneBuilder